# kmail-account-wizard

./: .craft.ini  .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  REUSE.toml  accountwizard.categories  accountwizard.renamecategories
.reuse/: dep5
components/: BasePage.qml  CMakeLists.txt  InfoDetail.qml  accountwizardplugin.cpp  accountwizardplugin.h
po/ar/: accountwizard.po  accountwizard_tine20.po
po/ast/: accountwizard.po
po/az/: accountwizard.po  accountwizard_tine20.po
po/bg/: accountwizard.po  accountwizard_tine20.po
po/bs/: accountwizard.po  accountwizard_tine20.po
po/ca/: accountwizard.po  accountwizard_tine20.po
po/ca@valencia/: accountwizard.po  accountwizard_tine20.po
po/cs/: accountwizard.po  accountwizard_tine20.po
po/da/: accountwizard.po  accountwizard_tine20.po
po/de/: accountwizard.po  accountwizard_tine20.po
po/el/: accountwizard.po  accountwizard_tine20.po
po/en_GB/: accountwizard.po  accountwizard_tine20.po
po/eo/: accountwizard.po  accountwizard_tine20.po
po/es/: accountwizard.po  accountwizard_tine20.po
po/et/: accountwizard.po  accountwizard_tine20.po
po/eu/: accountwizard.po  accountwizard_tine20.po
po/fi/: accountwizard.po  accountwizard_tine20.po
po/fr/: accountwizard.po  accountwizard_tine20.po
po/ga/: accountwizard.po  accountwizard_tine20.po
po/gl/: accountwizard.po  accountwizard_tine20.po
po/he/: accountwizard.po
po/hi/: accountwizard.po
po/hu/: accountwizard.po  accountwizard_tine20.po
po/ia/: accountwizard.po  accountwizard_tine20.po
po/it/: accountwizard.po  accountwizard_tine20.po
po/ja/: accountwizard.po  accountwizard_tine20.po
po/ka/: accountwizard.po  accountwizard_tine20.po
po/kk/: accountwizard.po  accountwizard_tine20.po
po/km/: accountwizard.po  accountwizard_tine20.po
po/ko/: accountwizard.po  accountwizard_tine20.po
po/lt/: accountwizard.po  accountwizard_tine20.po
po/lv/: accountwizard.po
po/mai/: accountwizard.po
po/mr/: accountwizard.po  accountwizard_tine20.po
po/nb/: accountwizard.po  accountwizard_tine20.po
po/nds/: accountwizard.po  accountwizard_tine20.po
po/nl/: accountwizard.po  accountwizard_tine20.po
po/nn/: accountwizard.po  accountwizard_tine20.po
po/pa/: accountwizard.po
po/pl/: accountwizard.po  accountwizard_tine20.po
po/pt/: accountwizard.po  accountwizard_tine20.po
po/pt_BR/: accountwizard.po  (+1 more)
src/: CMakeLists.txt  Messages.sh  accountconfiguration.cpp  accountconfiguration.h  accountwizard.knsrc  configfile.cpp  configfile.h  consolelog.cpp  consolelog.h  controller.cpp  controller.h  cryptopage.cpp  cryptopage.h  dialog.cpp  dialog.h  dynamicpage.cpp  dynamicpage.h  foreigntypes.h  global.cpp  global.h  identity.cpp  identity.h  identitybase.h  inprocess-main.cpp  inprocess-main.h  ispdb.cpp  ispdb.h  ispdbhelper.cpp  ispdbhelper.h  ispdbservice.cpp  ispdbservice.h  key.cpp  key.h  ldap.cpp  ldap.h  loadpage.cpp  loadpage.h  main.cpp  manualconfiguration.cpp  manualconfiguration.h  (+35 more)
src/accountwizard/: CMakeLists.txt  accountconfigurationbase.cpp  accountconfigurationbase.h  accountconfigurationimpl.cpp  accountconfigurationimpl.h  identity.cpp  identity.h  identitybase.cpp  identitybase.h  identityimpl.cpp  identityimpl.h  ispdbservice.cpp  ispdbservice.h  libaccountwizard_private_export.h  manualconfiguration.cpp  manualconfiguration.h  manualconfigurationbase.cpp  manualconfigurationbase.h  manualconfigurationimpl.cpp  manualconfigurationimpl.h  resource.cpp  resource.h  servertest.cpp  servertest.h  setupbase.cpp  setupbase.h  setupmanager.cpp  setupmanager.h  transport.cpp  transport.h
src/accountwizard/autotests/: CMakeLists.txt  accountconfigurationtest.cpp  accountconfigurationtest.h  identitybasetest.cpp  identitybasetest.h  ldaptest.cpp  manualconfigurationtest.cpp  manualconfigurationtest.h  resourcetest.cpp  resourcetest.h  setupmanagertest.cpp  setupmanagertest.h
src/accountwizard/ispdb/: configurationmodel.cpp  configurationmodel.h  serverconfiguration.cpp  serverconfiguration.h
src/apps/: CMakeLists.txt  main.cpp  org.kde.accountwizard.desktop  resources.qrc
src/apps/contents/ui/: ConfigurationDelegate.qml  PersonalDataPage.qml  main.qml
src/apps/qml/: ConfigurationSelectionPage.qml  DetailsPage.qml  ManualConfigurationPage.qml  PersonalDataPage.qml
src/autotests/: CMakeLists.txt  accountconfigurationtest.cpp  accountconfigurationtest.h  identitybasetest.cpp  ldaptest.cpp  manualconfigurationtest.cpp  manualconfigurationtest.h  resourcetest.cpp  resourcetest.h  setupmanagertest.cpp  setupmanagertest.h
src/contents/ui/: AccountSelectionPage.qml  PersonalDataPage.qml  main.qml
src/data/: org.kde.accountwizard.appdata.xml
src/ispdb/: CMakeLists.txt  autoconfigkolabfreebusy.cpp  autoconfigkolabfreebusy.h  autoconfigkolabldap.cpp  autoconfigkolabldap.h  autoconfigkolabmail.cpp  autoconfigkolabmail.h  configurationmodel.cpp  configurationmodel.h  ispdb.cpp  ispdb.h  main.cpp  serverconfiguration.cpp  serverconfiguration.h
src/ispdb/autotests/: CMakeLists.txt  autoconfigkolabfreebusy.cpp  autoconfigkolabldaptest.cpp  autoconfigkolabmailtest.cpp  errorserver.py  ispdbtest.cpp
src/legacy/: configfile.cpp  configfile.h  cryptopage.cpp  cryptopage.h  ispdb.cpp  ispdb.h  key.cpp  key.h  ldap.cpp  ldap.h  resource.cpp  resource.h  restoreldapsettingsjob.cpp  restoreldapsettingsjob.h  servertest.cpp  servertest.h  setupautoconfigkolabfreebusy.cpp  setupautoconfigkolabfreebusy.h  setupautoconfigkolabldap.cpp  setupautoconfigkolabmail.cpp  setupispdb.cpp  setupobject.cpp  setupobject.h
src/packagestructure/: CMakeLists.txt  wizard-packagestructure.json  wizardpackage.cpp  wizardpackage.h
src/qml/: ConfigurationDelegate.qml  ConfigurationSelectionPage.qml  DetailsPage.qml  Main.qml  ManualConfigurationPage.qml  PersonalDataPage.qml  WizardPage.qml
src/ui/: cryptopage.ui  personaldatapage.ui  providerpage.ui  typepage.ui
src/wizards/: CMakeLists.txt
src/wizards/tine20/: CMakeLists.txt  tine20wizard.desktop  tine20wizard.es
wizards/: CMakeLists.txt
(+34 files in other folders)
